--- a/.gitignore
+++ b/.gitignore
@@ -139,9 +139,12 @@ GitHub.sublime-settings
 
 #react
 
+#package lock
+package-lock.json
+yarn.lock
+
 # Logs
 logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -154,8 +157,6 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
