--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "bootstrap": "^5.3.3",
+    "pdfjs-dist": "^5.0.375",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-pdf": "^9.2.1",
+    "react-router-dom": "^7.3.0",
     "ui-core": "file:"
   },
   "devDependencies": {
@@ -24,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "sass": "^1.85.1",
+    "vite": "^6.2.2"
   }
 }
