--- a/BACKEND/requirements.txt
+++ b/BACKEND/requirements.txt
@@ -1,19 +1,22 @@
 asgiref==3.8.1
+attrs==25.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
-coreapi==2.3.3
-coreschema==0.0.4
+dj-rest-auth==7.0.1
 Django==5.1.7
+django-allauth==65.5.0
 django-cors-headers==4.7.0
 djangorestframework==3.15.2
+drf-spectacular==0.28.0
 idna==3.10
-itypes==1.2.0
-Jinja2==3.1.6
-legacy-cgi==2.6.2
-MarkupSafe==3.0.2
+inflection==0.5.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 mysqlclient==2.2.7
+PyYAML==6.0.2
+referencing==0.36.2
 requests==2.32.3
-setuptools==76.0.0
+rpds-py==0.23.1
 sqlparse==0.5.3
 tzdata==2025.1
 uritemplate==4.1.1
