--- a/BACKEND/requirements.txt
+++ b/BACKEND/requirements.txt
@@ -13,6 +13,7 @@ inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 mysqlclient==2.2.7
+pillow==11.1.0
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
