--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -14,6 +14,7 @@
     "axios": "1.8.4",
     "bootstrap": "5.3.3",
     "jwt-decode": "4.0.0",
+    "lucide-react": "0.484.0",
     "pdfjs-dist": "5.0.375",
     "react": "19.0.0",
     "react-dom": "19.0.0",
