--- a/BACKEND/requirements.txt
+++ b/BACKEND/requirements.txt
@@ -8,6 +8,8 @@ django-allauth==65.5.0
 django-cors-headers==4.7.0
 djangorestframework==3.15.2
 drf-spectacular==0.28.0
+factory_boy==3.3.3
+Faker==37.1.0
 idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
