--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -13,6 +13,9 @@
     "@vitejs/plugin-react": "4.3.4",
     "axios": "1.8.4",
     "bootstrap": "5.3.3",
+    "chart.js": "4.4.8",
+    "date-fns": "4.1.0",
+    "epubjs": "0.3.93",
     "jwt-decode": "4.0.0",
     "lucide-react": "0.484.0",
     "pdfjs-dist": "5.0.375",
