Finalizacion del lector de archivo Epub y mejoras en el UI/UX

--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -13,18 +13,23 @@
     "@vitejs/plugin-react": "4.3.4",
     "axios": "1.8.4",
     "bootstrap": "5.3.3",
+    "buffer": "6.0.3",
     "chart.js": "4.4.8",
     "date-fns": "4.1.0",
     "epubjs": "0.3.93",
     "jwt-decode": "4.0.0",
     "lucide-react": "0.484.0",
+    "path-browserify": "1.0.1",
     "pdfjs-dist": "5.0.375",
+    "process": "0.11.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "5.5.0",
     "react-pdf": "9.2.1",
     "react-router-dom": "7.3.0",
-    "ui-core": "file:"
+    "stream-browserify": "3.0.0",
+    "ui-core": "file:",
+    "util": "0.12.5"
   },
   "devDependencies": {
     "@eslint/js": "9.21.0",
